# pipexec

./: .gitignore  LICENSE  README.md  app.py  pipexec.py  pyproject.toml  setup.py
console/: __init__.py  pipexec.py
pipexec/: app.py  cli.py  command.py
