[tool.poetry]
name = "pipexec"
version = "0.1.3"
description = "Test pip packages quickly"
authors = ["Amos Omondi"]
license = "MIT"
readme = 'README.md'
repository = "https://github.com/amos-o/pipexec"

[tool.poetry.dependencies]
python = "~3.8"
cleo = "^0.6.8"

[tool.poetry.dev-dependencies]
pylint = "^1.9"

[tool.poetry.scripts]
poetry = 'console:main'
