[tool.poetry]
name = "pipexec"
version = "0.2.4"
description = "Test pip packages quickly"
authors = ["Amos Omondi"]
license = "MIT"
readme = 'README.md'
repository = "https://github.com/amos-o/pipexec"

[tool.poetry.dependencies]
python = "~3.8"
cleo = "~0.8.0"

[tool.poetry.dev-dependencies]
flake8 = "~3.7.9"

[tool.poetry.scripts]
pipexec = 'pipexec:main'
